src/styles.css
/*font-family: 'Playfair Display', serif;
font-family: 'Poppins', sans-serif;*/
:root {
  --branding-color: #6c63ff;
  --heading-font-family: "Playfair Display", serif;
  --default-font-family: "Poppins", sans-serif;
  --secondary-color: #f9f7fe;
}
body {
  font-family: var(--default-font-family);
}
h1,
h2,
h3,
h4,
h5,
h6 {
  color: black;
  font-family: var(--heading-font-family);
  font-weight: bold;
}

h1 {
  font-size: 96px;
  line-height: 1.5;
}
h2 {
  font-size: 64px;
}
h3 {
  font-size: 48px;
}
p {
  font-weight: normal;
  font-size: 16px;
  line-height: 30px;
}
.content h1 {
  font-size: 64px;
  line-height: 1.5;
}
.content h2 {
  font-size: 18px;
  font-family: var(--default-font-family);
}
.content h3 {
  font-size: 24px;
  line-height: 1.5;
  margin: 20px 0 0;
  font-family: var(--default-font-family);
}

.content p {
  font-size: 14px;
}
.content-container {
  padding: 60px 20px;
}
.content-container {
  margin: 30px;
}
.hero {
  background: var(--secondary-color);
  text-align: center;
  padding: 80px 20px;
}

.hero p {
  font-size: 36px;
  font-weight: bold;
  margin: 0;
  color: #272142;
}
.hero h2 {
  font-family: var(--default-font-family);
  font-weight: normal;
  line-height: 1.5;
  font-size: 24px;
}

.btn-branding {
  background: var(--branding-color);
  color: white;
  border-radius: 4px;
  font-size: 18px;
  line-height: 27px;
  padding: 15px 30px;
}

.btn-branding-outline {
  color: var(--branding-color);
  border: 1px solid var(--branding-color);
  border-radius: 4px;
  font-size: 18px;
  line-height: 27px;
  padding: 15px 30px;
}
.project-descriptions {
  padding: 120px 60px;
}
.logo {
  max-height: 40px;
}
nav {
  padding: 20px 0;
}
nav ul {
  margin: 0;
  padding: 0;
}
nav li {
  display: inline;
  list-style: none;
  line-height: 42px;
  margin-left: 15px;
}
nav a {
  text-decoration: none;
  color: #272142;
  transition: all 100ms ease;
}

nav a:hover,
nav li.active a {
  color: var(--branding-color);
}
footer .email-link {
  text-decoration: none;
  color: black;
  font-size: 24px;
}

footer .email-link:hover {
  color: var(--branding-color);
}
footer {
  margin: 60px 0;
}
footer .social-links a {
  margin: 0 20px;
  color: var(--branding-color);
  background-color: var(--secondary-color);
  padding: 10px 14px;
  border-radius: 50%;
  font-size: 18px;
  transition: all 100ms ease-in-out;
}

footer .social-links a:hover {
  color: white;
  background-color: var(--branding-color);
}
footer .contact-box {
  background-color: var(--secondary-color);
  padding: 30px 120px;
  border-radius: 10px;
}

footer .contact-box p {
  margin: 0;
}
@media (max-width: 900px) {
  h1 {
    font-size: 44px;
    line-height: 2;
  }
  h2 {
    font-size: 44px;
  }
  h3 {
    font-size: 18px;
  }
  .project-descriptions {
    padding: 0;
    text-align: center;
  }

  .content {
    text-align: center;
    padding: 0;
  }
  nav a {
    font-size: 12px;
  }
  footer .contact-box {
    padding: 30px;
  }
}

